# analizador-gastos

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/analizador_gastos/: __init__.py  analisis.py  cli.py  lector.py  modelos.py  reporte.py
src/analizador_gastos/datos/: gastos_ejemplo.csv
tests/: conftest.py  test_analisis.py  test_cli.py  test_lector.py  test_reporte.py
